# agentic-app

./: .env.example  .gitignore  README.md  pyproject.toml  staible-reserves.csv  test-claims.csv  test_minuses.csv
scripts/: run_app.sh
src/agentic_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: children.py  llm_client.py  orchestrator.py  strands_runtime.py
src/app/: __init__.py  chat_router.py  launch.py  main.py  text_formatting.py
src/core/: __init__.py  lifecycle.py  models.py
src/tools/: __init__.py  charting.py  column_inference.py  mock_actuarial.py  reserving.py  triangle_from_transactions.py  validation.py
tests/: test_calendar_as_of.py  test_chat_router.py  test_column_inference.py  test_lifecycle.py  test_narrative_hints.py  test_orchestrator_integration.py  test_runtime_smoke.py  test_tools_mock_actuarial.py  test_tools_reserving.py  test_triangle_transactions.py
tests/fixtures/: triangle_sample.json
