[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-app"
version = "0.1.0"
description = "Strands-based multi-agent actuarial MVP with Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.44.0",
  "plotly>=5.24.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "openai>=1.54.0",
  "strands-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
run-app = "app.launch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
